fix sidebar z-index

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -23,7 +23,7 @@ body {
   }
   .sidebar {
     background-color: @white;
-    z-index: 1;
+    z-index: 100;
     box-shadow: 4px 0 4px 0 rgba(43, 45, 55, 0.01);
   }
 }
